@@ -1,6 +1,7 @@
 eglibc (2.9-27+multiarch) UNRELEASED; urgency=low
 
   * Use the multiarch path for the native version and optimized flavors.
+  * Simplify the creation of /etc/ld.so.conf.d/<triplet>.conf.
 
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 07 Sep 2009 21:04:08 +0200
 
